# AVocado

./: .gitignore  CMakeLists.txt  LICENSE  Metas.cmake  README.md
.github/workflows/: push.yml
cmake/in/: AVocado-config.cmake.in  AVocadoConfig.cmake.in  avbackend.pc.in  avcore-config.cmake.in  avcore.pc.in  avocado-sdl.pc.in  avocado.pc.in  avutil.pc.in
include/av/backend/: app.hpp
include/av/core/: app.hpp  input.hpp  service.hpp
include/av/core/graphics/: mesh.hpp  shader.hpp
include/av/core/util/: command_parser.hpp  log.hpp  task_queue.hpp
include/av/util/: expr_traits.hpp  log.hpp  task_queue.hpp  time.hpp
include/av/util/graphics/: color.hpp
include/glad/: glad.h
include/stb/: stb_image.h  stb_image_write.h
packer/: CMakeLists.txt  packer.cpp
src/: CMakeLists.txt  glad.c
src/av/: bin_pack.hpp  glad.h  input.hpp  io.hpp  khrplatform.h  log.hpp  math.hpp  stb_image.h  stb_image_write.h  time.hpp
src/av/graphics/: color.hpp  mesh.hpp  shader.hpp  texture.hpp
src/av/graphics/2d/: pixmap.hpp  sprite_batch.hpp  texture_atlas.hpp
src/av_core/av/: callback.hpp  gl.hpp  globals.hpp  log.hpp
src/av_core/av/gl/: buffer.hpp  gl.hpp  mesh.hpp  shader.hpp  texture.hpp
src/av_core/av/graphics/: color.hpp  pixmap.hpp
src/av_glfw/av/glfw/: app.hpp  assets.hpp  glfw.hpp  globals_glfw.hpp
src/av_glfw/av/glfw/gl/: buffers.hpp  mesh.hpp  shader.hpp
src/av_sdl/: app.hpp  glad_impl.h  input.hpp
src/backend/: app.cpp  input.cpp
src/core/: app.cpp  input.cpp
src/core/graphics/: mesh.cpp  shader.cpp
src/core/util/: log.cpp
src/packer/: packer.cpp
src/util/: log.cpp
tests/: CMakeLists.txt  main.cpp
